Changed height of toggle-button to fix missing bar bug on mobile

--- a/public/stylesheets/shared.scss
+++ b/public/stylesheets/shared.scss
@@ -109,7 +109,7 @@ main {
 .toggle-button {
     background-color: transparent;
     padding: 0;
-    height: 1rem;
+    height: 2rem;
     
     border: none;
     cursor: pointer;
